--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,12 @@ body {
   @apply h-full text-base bg-geyser-200;
 }
 
+/* COMPONENTS */
 .button-icon {
   @apply flex items-center justify-center text-center transition delay-100 bg-white rounded-full cursor-pointer text-emerald-500 hover:bg-emerald-500 hover:text-white w-14 h-14 shadow-geyser-10 hover:shadow-emerald-40 text-2xl
 }
+
+.account {
+  @apply flex items-center gap-3 p-2 transition delay-100 bg-white rounded-full cursor-pointer hover:bg-emerald-500 shadow-geyser-10 hover:shadow-emerald-40 group
+}
+
