feat: Added Sidebar component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,20 +2,45 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+@font-face {
   font-family: "TT Firs Neue Trial Var Roman";
+  src: url("../public/static/fonts/tt-firs-neue-trial-var-roman.ttf")
+    format("truetype");
+  font-display: swap;
+  font-weight: 400;
 }
 
 body {
   @apply h-full text-base bg-geyser-200;
+  font-family: "TT Firs Neue Trial Var Roman";
+  font-size: 16px;
 }
 
-/* COMPONENTS */
+/*********** COMPONENTS ***********/
+
+/************* Buttons ***********/
 .button-icon {
   @apply flex items-center justify-center text-center transition delay-100 bg-white rounded-full cursor-pointer text-emerald-500 hover:bg-emerald-500 hover:text-white w-14 h-14 shadow-geyser-10 hover:shadow-emerald-40 text-2xl
 }
 
-.account {
-  @apply flex items-center gap-3 p-2 transition delay-100 bg-white rounded-full cursor-pointer hover:bg-emerald-500 shadow-geyser-10 hover:shadow-emerald-40 group
+/************* Search ***********/
+.search {
+  @apply relative w-2/5 bg-white rounded-full h-14 flex items-center overflow-hidden
+}
+.search-icon {
+  @apply w-16 relative flex items-center justify-center text-xl text-emerald-500 after:content-[''] after:absolute after:-top-1 after:right-0 after:w-px after:h-7 after:z-20 after:bg-emerald-200
 }
 
+/************* Account ***********/
+.account {
+  @apply flex items-center gap-3 p-2 transition delay-100 bg-white rounded-full cursor-pointer hover:bg-emerald-500 shadow-geyser-10 hover:shadow-emerald-40
+}
+
+/************* Sidebar ***********/
+.sidebar-item {
+  @apply flex items-center justify-center w-[90%] relative h-28 text-emerald-500 rounded-e-3xl overflow-hidden cursor-pointer transition before:h-full before:w-full before:-translate-x-full hover:before:translate-x-0 before:content-[''] before:absolute before:transition before:bg-gradient-to-b from-emerald-500 to-[#29C1AF] before:border-emerald-700 before:border-l-4
+}
+
+.sidebar-item.is-active {
+  @apply before:translate-x-0 before:content-[''] before:absolute before:transition before:bg-gradient-to-b from-emerald-500 to-[#29C1AF] before:border-emerald-700 before:border-l-4 !text-white
+}
